added testing framework jest and some unit tests

--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "@stencil/starter",
+  "name": "stencil-video-player",
   "private": true,
   "version": "0.0.1",
-  "description": "Stencil Starter App",
+  "description": "Stencil Video Player",
+  "main": "dist/collection/index.js",
+  "types": "dist/collection/index.d.ts",
+  "collection": "dist/collection/collection-manifest.json",
   "files": [
-    "dist"
+    "dist/"
   ],
+  "browser": "dist/videoplayer.js",
   "scripts": {
     "build": "stencil build",
-    "watch": "stencil build --dev --watch",
     "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
     "serve": "stencil-dev-server",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "test": "jest --no-cache"
   },
   "dependencies": {
     "@stencil/core": "next",
@@ -19,16 +23,31 @@
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
-    "@stencil/utils": "latest"
+    "@stencil/utils": "latest",
+    "@types/jest": "^21.1.1",
+    "jest": "^21.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/stencil-starter.git"
+    "url": "git+https://github.com/CookieCookson/stencil-video-player.git"
   },
-  "author": "Ionic Team",
+  "author": "Christian Cook",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ionic-team/stencil"
+    "url": "https://github.com/CookieCookson/stencil-video-player"
   },
-  "homepage": "https://github.com/ionic-team/stencil"
+  "homepage": "https://github.com/CookieCookson/stencil-video-player",
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json",
+      "jsx"
+    ]
+  }
 }
