--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@stencil/core": "next",
-    "@stencil/router": "latest"
+    "@stencil/router": "latest",
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
